--- a/review.html
+++ b/review.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Read authentic customer reviews on the best nail products, tools, and nail art designs at [Your Website]. Find out what others are saying about our nail art supplies and services.">
     <meta name="author" content="Nail-Art">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="/Nail-Art Website/Code/CSS/style.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Review</title>
 </head>
